<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_home"
        android:orderInCategory="0"
        android:title="@string/action_home"
        android:icon="@drawable/btn_home" />
    <item
        android:id="@+id/action_az"
        android:orderInCategory="25"
        android:title="@string/action_az"
        android:icon="@drawable/btn_az_dark" />
    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="50"
        android:title="@string/action_favorite"
        android:icon="@drawable/btn_favorite_dark" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/btn_settings_dark" />
</menu>