<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".SettingsActivity" >

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/settings_favourites_colour"
	        android:textColor="@color/text"
	        android:gravity="right"
			android:textSize="15sp" />
	    <Spinner
	        android:id="@+id/settings_map_favourite_colour"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/settings_public_colour"
	        android:textColor="@color/text"
	        android:gravity="right"
			android:textSize="15sp" />
	    <Spinner
	        android:id="@+id/settings_map_public_colour"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/settings_private_colour"
	        android:textColor="@color/text"
	        android:gravity="right"
			android:textSize="15sp" />
	    <Spinner
	        android:id="@+id/settings_map_private_colour"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" />
    </LinearLayout>
    
</LinearLayout>